retrieveUnpackaged/objects/Panel_Member__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COI_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COI Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expert_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup to contact object to find an expert reviewer</description>
        <label>Expert Reviewer</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Expert Reviewer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Panel Members</relationshipLabel>
        <relationshipName>Panel_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Panel_Status__c</fullName>
        <description>It is the status of the panel to which the panel member is associated.</description>
        <formula>Panel__r.Panel_Status_Text__c</formula>
        <label>Panel Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel__c</fullName>
        <label>Panel</label>
        <referenceTo>Paneling__c</referenceTo>
        <relationshipLabel>Panel Members</relationshipLabel>
        <relationshipName>Panel_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>It describe to which record, the panel member is associated.</description>
        <formula>IF(Expert_Reviewer__r.RecordType.DeveloperName = &apos;Expert_Reviewer&apos;, &apos;Expert Reviewer&apos;, &apos;Staff User&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup to Reviewer pool object to find the reviewer</description>
        <label>Reviewer</label>
        <referenceTo>Reviewer_Pool__c</referenceTo>
        <relationshipLabel>Panel Members</relationshipLabel>
        <relationshipName>Panel_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>It describe the role of the particular panel members from a set of values.</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Panel Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Liaison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Participant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Its is a lookup to user object to find the staff member.</description>
        <label>Staff Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Panel_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>It describes the status of the panel member from a set of values.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Panel Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Panel__c</columns>
        <columns>NAME</columns>
        <columns>Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Panel Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panel Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>